--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "ng2-pdf-viewer": "^3.0.2",
     "rxjs": "^5.5.2",
+    "tesseract.js": "^1.0.10",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
